--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,1 +1,28 @@
+.weather-header {
+  background-color: #17a2b8 !important;
+}
 
+.footer {
+  position: fixed;
+  text-align: center;
+  bottom: 0;
+  width: 100%;
+  font-size: 20px;
+  gap: 10px;
+  padding-top: 20px;
+}
+
+.fa-github {
+  font-size: 24px;
+  transition: transform 0.3s ease-in-out;
+}
+
+.fa-github:hover {
+  transform: rotate(360deg) scale(1.2);
+}
+
+@media only screen and (max-width: 1300px) {
+  .footer {
+    display: none;
+  }
+}
